tests/errors/init_state/overwrite/overwrite_non_drop_field_errors.sim

        struct Wrap: Move { r: &out i64 }
        struct Container: Move { w1: Wrap w2: Wrap }
        extern fn take_wrap(w: Wrap);
        extern fn take(c: Container);
        fn f(w0: Wrap, w1: Wrap) {
          c: Container;
          entry:
            c.w1 = move w0;
            c.w1 = move w1;
            return
        }
        