tests/errors/init_state/overwrite/overwrite_non_drop_field_errors.err.expected
error: at 10:13: [INIT-OverwriteWithoutDrop] In function 'f', block 'entry': cannot overwrite 'c.w1': type Custom("Wrap") is not Drop and the value is still live (consume it via `drop c.w1` first)
    |
 10 |             c.w1 = move w1;
    |             ^^^^^^^^^^^^^^
